# InstagramBot

./: .dmypy.json  .gitignore  README.md  main.py  pyproject.toml
InstagramBot/: bot.py  init_driver.py  prerequisite.py
scratchs/: test.py
